# WebDataMining

./: .gitignore  AccessConfigDlg.cpp  AccessConfigDlg.h  AccessDataBase.cpp  AccessDataBase.h  AlterPictureDlg.cpp  AlterPictureDlg.h  AlterTopicUnitDlg.cpp  AlterTopicUnitDlg.h  AutoCompl.cpp  AutoCompl.h  BaseObject.cpp  BaseObject.h  CDragEdit.cpp  CDragEdit.h  CJMaskEdit.cpp  CJMaskEdit.h  CJTreeCtrl.cpp  CJTreeCtrl.h  CharsetDetector.cpp  CharsetDetector.h  CheckComboBox.cpp  CheckComboBox.h  CheckTreeCtrl.cpp  CheckTreeCtrl.h  CheckTreeData.cpp  CheckTreeData.h  ChildFrm.cpp  ChildFrm.h  ChineseCodeLib.cpp  ChineseCodeLib.h  Column.cpp  Column.h  ColumnClassInfoDlg.cpp  ColumnClassInfoDlg.h  ComboListCtrl.cpp  ComboListCtrl.h  CommonFunction.cpp  CommonFunction.h  ConTabCtrl.cpp  (+262 more)
help/: helpfile.hhc  helpfile.hhk  wdm.chw  wdm.hhp
include/: HLPubDef.h  HLSegFunc.h
lib/: HLSSplit.lib
res/: WebDataMining.rc2  ribbon.mfcribbon-ms
tagwindow/: JTagWindow.cpp  JTagWindow.h  JUtility.h  (+3 more)
universalcharset/: CharDistribution.cpp  CharDistribution.h  Charset.h  JpCntx.cpp  JpCntx.h  LangBulgarianModel.cpp  LangCyrillicModel.cpp  LangGreekModel.cpp  LangHungarianModel.cpp  LangThaiModel.cpp  Makefile.am  nsBig5Prober.cpp  nsCharSetProber.h  nsEUCJPProber.cpp  nsEUCKRProber.cpp  nsEUCTWProber.cpp  nsEscCharsetProber.cpp  nsEscSM.cpp  nsGB2312Prober.cpp  nsLatin1Prober.cpp  nsMBCSGroupProber.cpp  nsMBCSSM.cpp  nsPRMem.h  nsPRTypes.h  nsPkgInt.h  nsSBCSGroupProber.cpp  nsSBCharSetProber.cpp  nsSJISProber.cpp  nsUTF8Prober.cpp  nsUniversalDetector.cpp  nsUniversalDetector.h
(+126 files in other folders)
