
lib_LIBRARIES = libunivchardet.a
libunivchardet_a_SOURCES = \
	nsPRTypes.h \
	nsPRMem.h \
	nsPkgInt.h \
	nsCharSetProber.h  \
	nsCodingStateMachine.h \
	Big5Freq.tab \
	EUCKRFreq.tab \
	EUCTWFreq.tab \
	GB2312Freq.tab \
	JISFreq.tab \
	nsEscSM.cpp \
	nsMBCSSM.cpp \
	nsEscCharsetProber.h nsEscCharsetProber.cpp \
	nsSBCharSetProber.h nsSBCharSetProber.cpp \
	LangBulgarianModel.cpp \
	LangCyrillicModel.cpp  \
	LangGreekModel.cpp \
	LangHungarianModel.cpp \
	LangThaiModel.cpp \
	CharDistribution.h CharDistribution.cpp \
	JpCntx.h JpCntx.cpp \
	nsBig5Prober.h nsBig5Prober.cpp\
	nsEUCJPProber.h nsEUCJPProber.cpp \
	nsEUCKRProber.h nsEUCKRProber.cpp \
	nsEUCTWProber.h nsEUCTWProber.cpp \
	nsGB2312Prober.h nsGB2312Prober.cpp \
	nsLatin1Prober.h nsLatin1Prober.cpp \
	nsMBCSGroupProber.h nsMBCSGroupProber.cpp \
	nsSBCSGroupProber.h nsSBCSGroupProber.cpp \
	nsSJISProber.h nsSJISProber.cpp \
	nsUTF8Prober.h nsUTF8Prober.cpp \
	nsUniversalDetector.h nsUniversalDetector.cpp
